--- a/index.css
+++ b/index.css
@@ -38,4 +38,46 @@ main .welcome button{
     margin-top: 5%;
     font-size: 15px;
     display: block;
+    outline: none;
+    border: none;
+    transition: 0.5s;
+}
+
+main .welcome button:hover{
+    background-color: deepskyblue;
+    transition: 0.5s;
+}
+
+@media only screen and (min-width: 768px){
+    main .welcome img{
+        margin-top: 30%;
+        width: 40%;
+    }
+
+    main .welcome h1{
+        font-size: 50px;
+    }
+
+    main .welcome button{
+        font-size: 25px;
+        width: 30%;
+    }
+}
+
+@media only screen and (min-width: 1000px){
+    main .welcome img{
+        margin-top: 5%;
+        width: 20%;
+    }
+
+    main .welcome h1{
+        margin-top: 1%;
+        font-size: 60px;
+    }
+
+    main .welcome button{
+        font-size: 20px;
+        width: 30%;
+        margin-top: 1%;
+    }
 }
