--- a/inside.css
+++ b/inside.css
@@ -51,12 +51,13 @@ main .img{
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 60%;
-    margin-top: 20%;
+    width: 50%;
+    margin-top: 25%;
 }
 
 main h1{
     color: white;
     text-align: center;
+    font-size: 25px;
     text-shadow: 2px 2px 4px deepskyblue;
 }
