--- a/inside.css
+++ b/inside.css
@@ -15,6 +15,11 @@ body{
     background-color: black;
 }
 
+main{
+    width: 100%;
+    height: 100vh;
+}
+
 main nav{
     background-color: deepskyblue;
     height: 10vh;
@@ -52,12 +57,53 @@ main .img{
     margin-right: auto;
     margin-left: auto;
     width: 50%;
-    margin-top: 25%;
+    margin-top: 50%;
 }
 
-main h1{
+main .etst{
     color: white;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     text-shadow: 2px 2px 4px deepskyblue;
+}
+
+/*   design and lay outs   */
+
+section{
+    width: 100%;
+    height: 100vh;
+}
+
+section .design{
+    color: white;
+    text-align: center;
+    padding-top: 7%;
+    text-shadow: 2px 2px 4px deepskyblue;
+}
+
+section img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding-top: 5%;
+}
+
+section a{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding-top: 5%;
+    text-decoration: none;
+    color: white;
+}
+
+section hr{
+    border: solid 1px red;
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    margin-top: 5%;
 }
