--- a/inside.css
+++ b/inside.css
@@ -1,223 +1,94 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 *{
-    padding: 0%;
     margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
     font-family: poppins;
 }
 
-html{
-    scroll-behavior: smooth;
+main{
+    height: 100vh;
+    width: 100%;
 }
 
 body{
     background-color: black;
-}
-
-main{
-    width: 100%;
     height: 100vh;
+    width: 100%;
 }
 
-main nav{
-    background-color: deepskyblue;
-    height: 10vh;
-}
-
-main ul{
-    text-align: center;
-}
-
-main li a{
+.back i{
     color: white;
-    text-decoration: none;
-    display: inline-block;
-    margin: 4%;
-    margin-top: 7%;
-}
-
-main .fa-arrow-left{
-    color: white;
-    position: absolute;
-    margin-left: -15%;
-    margin-top: -4%;
+    padding: 5%;
     font-size: 25px;
-    border: none;
-    border-radius: 1rem;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
 }
 
-/*   inside below nav  */
-main .imahe{
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    width: 50%;
-    margin-top: 50%;
-}
-
-main .tago{
-    display: none;
-}
-
-main .etst{
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    text-shadow: 2px 2px 4px deepskyblue;
-}
-
-/*   design and lay outs == tshirt   */
-
-section{
-    width: 100%;
-    height: 100vh;
-}
-
-section .design{
-    color: white;
-    text-align: center;
-    padding-top: 7%;
-    text-shadow: 2px 2px 4px deepskyblue;
-}
-
-section img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    padding-top: 5%;
-}
-
-section .imgcar{
-    display: none;
-}
-
-section .imgmoon{
-    display: none;
-}
-
-section a{
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    padding-top: 5%;
-    text-decoration: none;
-    color: white;
-}
-
-section hr{
-    border: solid 1px red;
-    width: 80%;
-    margin-right: auto;
-    margin-left: auto;
-    display: block;
+.background i{
+    color: black;
+    float: right;
+    font-size: 25px;
     margin-top: 5%;
+    margin-right: 80%;
 }
-
-section .tshirts{
+ 
+.fa-bars{
     color: white;
-    text-align: center;
-    padding-top: 7%;
+    font-size: 25px;
+    float: right;
+    margin-right: 5%;
+    margin-top: -10%;
 }
 
-section .img2{
-    display: block;
-    margin-left: auto;
+.inside-menu{
+    background-color: white;
+    position: absolute;
+    width: 250px;
+    height: 30vh;
+    border-radius: 0.5rem;
+    margin-top: -10%;
+    float: right;
+    right: 0;
+    top: 0;
+    transition: 1.5s;
+    transform: translateY(-250px);
+    opacity: 0;
+}
+
+.show{
+    transform: translateX(0);
+    opacity: 100;
+}
+
+.menubar .fa-xing{
+    margin-top: 20%;
+    color: black;
+}
+
+.inside-menu a{
+    text-decoration: none;
+    color: black;
+    position: absolute;
+}
+
+.inside-menu  .contact{
     margin-right: auto;
-    width: 80%;
-    padding-top: 5%;
+    margin-left: 10%;
+    margin-top: 40%;
+    text-align: center;
+    position: absolute;
 }
 
-@media only screen and (min-width: 768px){
-    main li a{
-        font-size: 30px;
-        margin-top: 4%;
-    }
-
-    main .fa-arrow-left{
-        font-size: 40px;
-        margin-top: -3%;
-        border: none;
-    }
-
-    /*   inside below nav  */
-    main .imahe{
-        margin-top: 50%;
-        margin-left: 35%;
-        width: 30%;
-        position: absolute;
-        display: none;
-    }
-
-    main .tago{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-        margin-top: 20%;
-    }
-
-    main .etst{
-        font-size: 40px;
-        margin-top: 5%;
-    }
-
-    /*   design and lay outs == tshirt   */
-    section{
-        width: 100%;
-        height: 100vh;
-    }
-
-    section .design{
-        font-size: 40px;
-    }
-
-    section a{
-        font-size: 30px;
-        margin-bottom: 10%;
-    }
-
-    section .tshirts{
-        font-size: 40px;
-    }
+.inside-menu .tshirt{
+    margin-top: 60%;
+    margin-right: auto;
+    margin-left: 10%;
+    text-align: center;
 }
 
-@media only screen and (min-width: 1024px){
-    main li a{
-        font-size: 20px;
-        margin-top: -0.5%;
-    }
-
-    main nav{
-        background-color: transparent;
-    }
-
-    main .fa-arrow-left{
-        margin-top: 0.5%;
-        font-size: 30px;
-        border: none;
-    }
-
-    /*   inside below nav  */
-    main .tago{
-        width: 20%;
-        margin-top: 10%;
-    }
-
-    section .carimg{
-        margin-left: 5%;
-        width: 40%;
-    }
-
-    section .moonimg{
-        margin-right: 5%;
-        width: 35%;
-        margin-top: -50%;
-    }
+.inside-menu .design{
+    margin-top: 80%;
+    margin-right: auto;
+    margin-left: 10%;
+    text-align: center;
 }
