--- a/inside.css
+++ b/inside.css
@@ -92,3 +92,21 @@ body{
     margin-left: 10%;
     text-align: center;
 }
+
+.img1{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    margin-top: 20%;
+    transition: 1.5s;
+    transform: translateY(-100px);
+    opacity: 0;
+    filter: blur(5px);
+}
+
+.image{
+    transform: translateY(0);
+    opacity: 100;
+    filter: blur(0);
+}
