--- a/inside.css
+++ b/inside.css
@@ -12,6 +12,15 @@ main{
     width: 100%;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+.main-div{
+    width: 100%;
+    height: 100vh;
+}
+
 body{
     background-color: black;
     height: 100vh;
@@ -158,6 +167,24 @@ body{
     color: black;
 }
 
+.browse{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    background-color: rgb(255, 0, 200);
+    margin-top: 5%;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    transition: 0.5s;
+}
+
+.browse:hover{
+    background-color: red;
+    transition: 0.5s;
+}
+
 .button1:hover{
     background-color: rgb(255, 0, 200);
     transition: 0.5s;
@@ -166,4 +193,54 @@ body{
 .learn:hover{
     background-color: rgb(255, 0, 200);
     transition: 0.5s;
+}
+
+/*   second layer   */
+.designs{
+    width: 100%;
+    height: 110vh;
+    background-color: black;
+}
+
+.inside-design .welcome{
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    display: block;
+    color: white;
+    transform: translateY(-100px);
+    opacity: 0;
+    filter: blur(5px);
+    transition: all 0.5s;
+}
+
+.inside-design .welcomes{
+    transition: 1.5s;
+    opacity: 100;
+    transform: translateY(0);
+    filter: blur(0);   
+}
+
+.inside-design{
+    padding: 5%;
+}
+
+.inside-design img{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding-top: 5%;
+}
+
+.inside-design a{
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding: 2% 2% 2% 2%;
+    border-radius: 0.5rem;
+    position: absolute;
+    margin-top: 5%;
+    margin-left: 30%;
+    text-decoration: none;
 }
